# triton-bot

./: .gitignore  Makefile  README.md  config.yaml  install.sh  pyproject.toml  run.py  sample.env  tox.ini  triton.service.template
.github/workflows/: common_checks.yml
abis/: mech.json  olas.json
tests/: __init__.py  test_chain.py  test_service.py  test_tools.py  test_triton.py
triton/: chain.py  constants.py  key_manager.py  service.py  tools.py  trader.py  triton.py
