[tool.poetry]
name = "triton"
version = "0.2.0"
description = ""
authors = ["David Vilela <dvilelaf@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.12,>=3.9"
python-telegram-bot = {extras = ["job-queue"], version = "^21.7"}
click = "^8.1.7"
olas-operate-middleware = "^0.7.0"
pytz = "^2025.2"

[poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
darglint = "^1.8.1"
pylint = "^3.3.1"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
